--- a/DDS.API/DDS.API.csproj
+++ b/DDS.API/DDS.API.csproj
@@ -18,4 +18,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\modules\customers\DDS.Modules.Customers.Application\DDS.Modules.Customers.Application.csproj" />
+    </ItemGroup>
+
 </Project>
