--- a/DDS.API/appsettings.Development.json
+++ b/DDS.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CustomerDB": "Server=localhost;Database=dds_customers;Port=5432;User Id=postgres;Trust Server Certificate=true;"
   }
 }
