--- a/modules/customers/DDS.Modules.Customers.Application/DDS.Modules.Customers.Application.csproj
+++ b/modules/customers/DDS.Modules.Customers.Application/DDS.Modules.Customers.Application.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\DDS.Modules.Customers.Infrastructure\DDS.Modules.Customers.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
