--- a/modules/customers/DDS.Modules.Customers.Infrastructure/DDS.Modules.Customers.Infrastructure.csproj
+++ b/modules/customers/DDS.Modules.Customers.Infrastructure/DDS.Modules.Customers.Infrastructure.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Marten" Version="6.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    </ItemGroup>
+
 </Project>
