--- a/modules/customers/DDS.Modules.Customers.Infrastructure/DDS.Modules.Customers.Infrastructure.csproj
+++ b/modules/customers/DDS.Modules.Customers.Infrastructure/DDS.Modules.Customers.Infrastructure.csproj
@@ -12,4 +12,9 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\DDS.BuildingBlocks.Infrastructure\DDS.BuildingBlocks.Infrastructure.csproj" />
+      <ProjectReference Include="..\DDS.Modules.Customers.Domain\DDS.Modules.Customers.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
