--- a/DDS.BuildingBlocks.Infrastructure/DDS.BuildingBlocks.Infrastructure.csproj
+++ b/DDS.BuildingBlocks.Infrastructure/DDS.BuildingBlocks.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DDS.BuildingBlocks.Application\DDS.BuildingBlocks.Application.csproj" />
       <ProjectReference Include="..\DDS.BuildingBlocks.Domain\DDS.BuildingBlocks.Domain.csproj" />
     </ItemGroup>
 
